<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Order_Status">

    <LinearLayout
        android:id="@+id/layoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:text="@string/الطلب"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorLableBackground"
        app:layout_constraintBottom_toTopOf="@id/vieoDivider"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar"
        />
    <TextView
        android:id="@+id/textOrderNumber"
        android:layout_width="155dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:gravity="center"
        android:text="@string/رقم_الطلب"
        android:textAllCaps="true"
        android:textColor="@color/colorTextSecondary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar" />

    <TextView
        android:id="@+id/textOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorTextPrimary"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/textOrderNumber"
        app:layout_constraintStart_toStartOf="@id/textOrderNumber"
        app:layout_constraintTop_toBottomOf="@id/textOrderNumber"/>

    <View
        android:id="@+id/vieoDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorDivider"
        app:layout_constraintTop_toBottomOf="@id/textOrderNumber"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:id="@+id/viewOrderplaced"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:background="@drawable/shape_status_remaining"
        app:layout_constraintBottom_toBottomOf="@id/imageOrderPlaced"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageOrderPlaced" />

    <ImageView
        android:id="@+id/imageOrderPlaced"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/placed"
        app:layout_constraintStart_toEndOf="@id/viewOrderplaced"
        app:layout_constraintTop_toBottomOf="@id/vieoDivider" />

    <View
        android:id="@+id/viewPlacedSupporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="@+id/imageOrderPlaced"
        app:layout_constraintEnd_toEndOf="@+id/imageOrderPlaced"
        app:layout_constraintEnd_toStartOf="@id/imageOrderPlaced"
        app:layout_constraintTop_toTopOf="@id/imageOrderPlaced"/>

    <View
        android:id="@+id/viewOrderRemaining"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:background="@drawable/shape_status_remaining"
        app:layout_constraintBottom_toBottomOf="@id/imageOrderremaining"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageOrderremaining"
        app:layout_constraintVertical_bias="0.576" />

    <ImageView
        android:id="@+id/imageOrderremaining"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="199dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/preparing"
        app:layout_constraintStart_toEndOf="@id/viewOrderRemaining"
        app:layout_constraintTop_toBottomOf="@id/vieoDivider" />

    <View
        android:id="@+id/viewOrderdeliverd"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:background="@drawable/shape_status_remaining"
        app:layout_constraintBottom_toBottomOf="@id/imageOrderdeliverd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageOrderdeliverd"
        app:layout_constraintVertical_bias="0.692" />

    <ImageView
        android:id="@+id/imageOrderdeliverd"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="308dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/deliver"
        app:layout_constraintStart_toEndOf="@id/viewOrderdeliverd"
        app:layout_constraintTop_toBottomOf="@id/vieoDivider" />

    <TextView
        android:id="@+id/textorderPlaced"
        android:layout_width="114dp"
        android:layout_height="0dp"
        android:text="@string/الطلب_مرسل"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/viewOrderplaced"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toEndOf="@id/viewOrderplaced" />

    <TextView
        android:id="@+id/textorderP"
        android:layout_width="175dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorTextSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/textorderPlaced"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/textorderPlaced"
        app:layout_constraintTop_toBottomOf="@id/textorderPlaced"
        />

    <TextView
        android:id="@+id/textOrderPreparing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/قبول_الطلب"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="224dp"
        tools:layout_editor_absoluteY="269dp"
        app:layout_constraintBottom_toTopOf="@id/viewOrderRemaining"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewOrderRemaining"/>

    <TextView
        android:id="@+id/text_Order_preparing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextSecondary"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="204dp"
        tools:layout_editor_absoluteY="291dp"
        app:layout_constraintTop_toBottomOf="@id/textOrderPreparing"
        app:layout_constraintEnd_toEndOf="@id/textOrderPreparing"
        app:layout_constraintStart_toStartOf="@id/textOrderPreparing"/>

    <TextView
        android:id="@+id/textOrderD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/توصيل_الطلب"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/viewOrderdeliverd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewOrderdeliverd"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textOrder_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorTextSecondary"
        app:layout_constraintEnd_toEndOf="@id/textOrderD"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/textOrderD"
        app:layout_constraintTop_toBottomOf="@id/textOrderD"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/layoutTool"
        android:layout_width="523dp"
        android:layout_height="95dp"
        android:layout_marginTop="700dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-50dp"
        tools:ignore="MissingConstraints"> </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/colorTextSecondary"
        app:layout_constraintBottom_toTopOf="@id/viewOrderRemaining"
        app:layout_constraintStart_toStartOf="@id/viewOrderplaced"
        app:layout_constraintTop_toBottomOf="@id/viewOrderplaced"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view2"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/colorTextSecondary"
        app:layout_constraintBottom_toTopOf="@id/viewOrderdeliverd"
        app:layout_constraintStart_toStartOf="@id/viewOrderRemaining"
        app:layout_constraintTop_toBottomOf="@id/viewOrderRemaining"/>

</androidx.constraintlayout.widget.ConstraintLayout>